// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider renders correctly 1`] = `
.c0 {
  width: 100%;
  left: 0;
  right: 0;
  background: #00C8DC no-repeat center center;
  background-size: cover;
}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

<section
  className="c0"
  color="primary"
/>
`;

exports[`Divider renders correctly with paddings 1`] = `
.c0 {
  width: 100%;
  left: 0;
  right: 0;
  background: #00C8DC no-repeat center center;
  background-size: cover;
  padding-top: 8px;
  padding-bottom: 32px;
}

@media (min-width:752px) {
  .c0 {
    padding-top: 32px;
  }
}

@media (min-width:1008px) {
  .c0 {
    padding-bottom: 8px;
  }
}

@media (min-width:752px) {

}

@media (min-width:1008px) {

}

<section
  className="c0"
  color="primary"
/>
`;
